[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "splice-outlier"
version = "0.2.0"
description = "Fast, scalable aberrant splicing outlier detection — drop-in FRASER2 replacement"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "splice contributors" }
]
keywords = [
    "RNA-seq", "splicing", "outlier detection", "bioinformatics",
    "FRASER2", "rare disease", "genomics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "anndata>=0.10",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "tqdm>=4.65",
    "statsmodels>=0.14",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
bam = ["pysam>=0.21"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pysam>=0.21"]

[project.urls]
"Bug Tracker" = "https://github.com/your-org/splice-outlier/issues"
"Source Code" = "https://github.com/your-org/splice-outlier"

[tool.setuptools.packages.find]
where = ["."]
include = ["splice*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["splice"]
omit = ["tests/*"]
